--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "tunnelerjs",
-  "main": "tunneler.js",
-  "description": "A fully modular Discord antispam bot with an additude.",
+  "name": "Promethus",
+  "main": "Promethus",
+  "description": "Promethus Anti-Spam",
   "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahoys/tunnelerjs.git"
+    "url": "https://github.com/DirtyTCM"
   },
   "scripts": {
     "test": "nodeunit tests.js",
